--- a/frontend/assets/sass/bulma_overrides/utilities/controls.sass
+++ b/frontend/assets/sass/bulma_overrides/utilities/controls.sass
@@ -15,7 +15,6 @@ $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default
   display: inline-flex
   font-size: $size-normal
   height: 2.25em
-  justify-content: flex-start
   line-height: 1.5
   padding-bottom: $control-padding-vertical
   padding-left: $control-padding-horizontal
